--- a/administrador/estadisticas.html
+++ b/administrador/estadisticas.html
@@ -3,17 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../estilos/styleindex.css">
     <title>Estadísticas</title>
     <!-- Styles -->
     <style>
     #chartdiv {
-      width: 100%;
-      height: 500px;
+        margin: auto;
+        width: 100%;
+        height: 200px;
     }
     </style>
 </head>
-<body>
-<div id="chartdiv"></div>
+<body class="container-body">
+    <header class="header-main">
+        <div class="header-systemhelp">
+        <p class="titulo-systemhelp">Estadísticas</p>
+        <nav class="menu-systemhelp">
+            <ul>
+                <li><a href="">Usuario</a>
+                <ul>
+                    <li><a href=".././control general/logout.php">Cerrar Sesión</a></li>
+                </ul>
+                </li>
+                <li><a href="main.php">Volver atrás</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    <section class="section-estadisticas">
+        <h1 class="titulo-estadisticas">Estadísticas de los documentos</h1>
+        <p class="descripcion-estadisticas">A continuación se muestra un gráfico con la cantidad de documentos en cada estado.</p>
+        <div id="chartdiv"></div>
+    </section>
 </body>
 <!-- Chart code -->
 <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
